# nanochat

./: ARCHITECTURE_NOTES.md  CLAUDE.md  README.md  architecture_wiki.html  pyproject.toml  requirements.txt
gpt/: checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  flash_attention.py  gpt.py  optim.py  tokenizer.py
gpt/graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
gpt/graphify-out/cache/: stat-index.json
scripts/: train_tok.py
