[project]
name = "nanochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.4",
    "cuda-toolkit==13.0.2",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.14.0",
    "idna==3.13",
    "jinja2==3.1.6",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "packaging==26.2",
    "pygments==2.20.0",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==15.0.0",
    "rustbpe==0.1.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "tiktoken==0.12.0",
    "tokenizers==0.23.1",
    "torch==2.11.0",
]
